Regression: Topology Auto-Masking breaks on Projected strokes #104618

Closed
opened 2023-02-11 16:00:49 +01:00 by Julien Kaspar · 10 comments
Member

System Information
Operating system: Linux-6.1.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.89.02

Blender Version
Broken: version: 3.5.0 Alpha, branch: HEAD (modified), commit date: 2023-02-10 18:38, hash: rB8a32d560560d
Worked: - 3.4

Caused by 789ab9b92a

Short description of error
When using Topology auto-masking there is a chance that the auto-masked geomtry does not update on the next stroke.
This is easiest to reproduce with the Grab brush, after voxel remeshing the mesh and switching back and forth between projected and spherical falloff.|

image

Exact steps for others to reproduce the error

  • Enter sculpt mode
  • Remesh the object with the voxel remesher (R to set resolution. Ctrl R to remesh)
  • Enable topology auto-masking (In the header or via Alt A)
  • Use the grab brush on the mesh
  • Change the stroke setting Falloff Shape to 'Projected'
  • Use the grab brush again
  • Repeat until you see the issue
**System Information** Operating system: Linux-6.1.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.89.02 **Blender Version** Broken: version: 3.5.0 Alpha, branch: HEAD (modified), commit date: 2023-02-10 18:38, hash: `rB8a32d560560d` Worked: - 3.4 Caused by 789ab9b92aff9a576a3d926583b1446827937fa9 **Short description of error** When using Topology auto-masking there is a chance that the auto-masked geomtry does not update on the next stroke. This is easiest to reproduce with the Grab brush, after voxel remeshing the mesh and switching back and forth between `projected` and `spherical` falloff.| ![image](/attachments/7d01c8b1-50f4-4287-b2c6-ed3f7c0a3b4b) **Exact steps for others to reproduce the error** - Enter sculpt mode - Remesh the object with the voxel remesher (`R` to set resolution. `Ctrl R` to remesh) - Enable topology auto-masking (In the header or via `Alt A`) - Use the grab brush on the mesh - Change the stroke setting `Falloff Shape` to 'Projected' - Use the grab brush again - Repeat until you see the issue
237 KiB
Member

I can confirm. Appears to be a regression. Bisecting...

I can confirm. Appears to be a regression. Bisecting...
Pratik Borhade added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-02-14 06:09:16 +01:00
Pratik Borhade changed title from Topology Auto-Masking breaks on Projected strokes to Regression: Topology Auto-Masking breaks on Projected strokes 2023-02-14 06:39:57 +01:00
Member

Caused by 789ab9b92a
@JosephEagar ^

Caused by 789ab9b92aff9a576a3d926583b1446827937fa9 @JosephEagar ^
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-02-14 17:16:34 +01:00
Brecht Van Lommel added this to the 3.5 milestone 2023-02-15 10:26:17 +01:00
Joseph Eagar was assigned by Brecht Van Lommel 2023-02-15 10:53:42 +01:00
Joseph Eagar added reference main 2023-02-17 07:37:53 +01:00
Member

Fixed in 5de9a5dea5

Fixed in 5de9a5dea5dbda77bd7d54a3236c96de21266608
Member

I'm still able to repro in current master: 5de9a5dea5
@JulienKaspar , can you?

I'm still able to repro in current master: 5de9a5dea5dbda77bd7d54a3236c96de21266608 @JulienKaspar , can you?
Author
Member

I can still reproduce it with an up to date build of main.

I can still reproduce it with an up to date build of main.
Member

I can't reproduce it, can someone make a video?

I can't reproduce it, can someone make a video?
Member

Sure, added video file.

Sure, added video file.
2.0 MiB
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-23 08:06:13 +01:00
Member

Second attempt at fixing: 4eb90fc15c

Second attempt at fixing: 4eb90fc15cfe556ffc96a0f5319fcd0e5c02ab2f
Member

Yes, fixed indeed.
@JosephEagar, AFAICS commit is not added to 3.5 branch. Maybe you'd need to cherry-pick it.

Yes, fixed indeed. @JosephEagar, AFAICS commit is not added to 3.5 branch. Maybe you'd need to cherry-pick it.
Member

Reopening because issue still exists in 3.5-release branch

Reopening because issue still exists in 3.5-release branch
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2023-02-24 07:07:51 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-24 13:27:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104618
No description provided.