Sculpt: Fix 104618: Topology automasking errors

Sculpt island tags are now invalidated whenever the PBVH
    is rebuilt.